# gpt_bot

./: .gitignore  README.md  pyproject.toml
notebooks/: part_1.ipynb  part_2.ipynb  part_3.ipynb  part_4.ipynb  training.ipynb
tiny_writr/: README.md  models.py  tiny_writr.py
tiny_writr/src/: dataset.py  models.py
