[project]
name = "gpt_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Thibault Dody", email = "thibault.dody@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "torch==2.0.1",
    "unidecode>=1.3.8",
    "numpy<2.0.0",
    "matplotlib>=3.10.0",
    "torchviz>=0.0.3",
    "ruff>=0.8.6",
    "black>=24.10.0",
    "mypy>=1.14.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
format = "black ."
